force-app/main/default/objects/BetaTestCustom__c/BetaTestCustom__c.object-meta.xml
<CustomObject
     >
    <historyRetentionPolicy n1:nil="true" />
    <label>BetaTestCustom</label>
    <nameField>
        <label>BetaTestCustom Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BetaTestCustoms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>