force-app/main/default/objects/BetaTestCustom__c/fields/BetaTestF2__c.field-meta.xml
<CustomField>
    <fullName>BetaTestF2__c</fullName>
    <complianceGroup>PII;PCI</complianceGroup>
    <description>test mdify</description>
    <label>BetaTestF2</label>
    <type>TextArea</type>
</CustomField>