force-app/main/default/objects/BetaTestCustom__c/fields/BetaTestF3__c.field-meta.xml
<CustomField>
    <fullName>BetaTestF3__c</fullName>
    <label>BetaTestF3</label>
    <type>TextArea</type>
</CustomField>