force-app/main/default/objects/BetaTestCustom__c/fields/BetaTestF5__c.field-meta.xml
<CustomField>
    <fullName>BetaTestF5__c</fullName>
    <label>BetaTestF5</label>
    <type>TextArea</type>
</CustomField>