force-app/main/default/objects/BetaTestCustom__c/recordTypes/BetaRecord1.recordType-meta.xml
<RecordType>
    <fullName>BetaRecord1</fullName>
    <active>true</active>
    <label>BetaRecord1</label>
</RecordType>