force-app/main/default/objects/BetaTestCustom__c/recordTypes/BetaRecord2.recordType-meta.xml
<RecordType>
    <fullName>BetaRecord2</fullName>
    <active>true</active>
    <description>test modify</description>
    <label>BetaRecord2</label>
</RecordType>